crates/toml_edit/tests/snapshots/invalid/string/no-close-09.stderr
TOML parse error at line 2, column 6
  |
2 | a = "
  |      ^
invalid basic string
